--- a/src/App.css
+++ b/src/App.css
@@ -111,6 +111,11 @@ input[type="number"] {
   z-index: 1000;
 }
 
+.charts-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
 /* NProgress CSS */
 /* Make clicks pass-through */
 #nprogress {
@@ -142,4 +147,11 @@ input[type="number"] {
   -webkit-transform: rotate(3deg) translate(0px, -4px);
       -ms-transform: rotate(3deg) translate(0px, -4px);
           transform: rotate(3deg) translate(0px, -4px);
+}
+
+/* media queries */
+@media (max-width: 768px) {
+  .charts-container {
+    grid-template-columns: 1fr;
+  }
 }
