--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:500);
+
 .App {
   text-align: center;
   padding: 2% 5%;
@@ -78,6 +79,11 @@ input[type="number"] {
   border: 1px solid #ccc;
   border-radius: 4px;
   position: relative;
+  line-height: 1.5;
+}
+
+.details {
+  line-height: 1.5;
 }
 
 .details-btn {
@@ -114,6 +120,14 @@ input[type="number"] {
 .charts-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
+}
+
+#footer {
+  padding: 2%;
+}
+
+.footer-icons {
+  margin: 5px 3px 0px 3px;
 }
 
 /* NProgress CSS */
