--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ input[type="number"] {
 
 .suggestions {
   width: 250px;
-  /* position: absolute; */
+  position: absolute;
   top: 45px;
   z-index: 2;
   align-self: center;
